Fix small white gap on auth splash

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -34,7 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 100px 0 164px;
+    margin: 100px 0 155px;
 }
 // ------------------------------
 // ------AUTH SPLASH BANNER CONTENT
